# ARB

./: .env.example  .gitignore  15m_a4_all_trades.json  15m_a4_closed_positions.csv  CLAUDE.md  COMPLETE_TRADE_ANALYSIS.md  Cargo.toml  DEPLOYMENT_GUIDE.md  HFT_OPTIMIZATION.md  ORDER_FLOW_STRATEGY.md  PLAN.md  PROJECT_STRUCTURE.md  QUICK_START_TESTING.md  RAILWAY_DEPLOYMENT.md  README.md  README_ORDERFLOW.md  SPREAD_ANALYSIS_METHOD.md  TESTING_GUIDE.md  TRADE_ANALYSIS.md  deploy-aws.sh  doc_2025-12-11_21-11-02.env  docker-compose.yml  fetch_all_trades.js  nobuyoshi005_all_trades.json  nobuyoshi005_closed_positions.csv
deploy/: README.md  setup.sh
lambda/: polymarket_proxy.py
migrations/: 001_orderflow_schema.sql
ml/: README.md  auto_train.py  extract_features.py  predict.py  requirements.txt  train_models.py
orderflow-executor/: .env.example  Cargo.toml  Dockerfile  README.md
orderflow-executor/src/: config.rs  executor.rs  main.rs  risk.rs  signals.rs
orderflow-listener/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
orderflow-listener/src/: main.rs  polygon.rs  storage.rs  types.rs
orderflow-reputation/: .env.example  Cargo.toml  Dockerfile  README.md
orderflow-reputation/src/: calculator.rs  main.rs  models.rs  username_fetcher.rs
src/: alerts.rs  auth.rs  btc_price.rs  clob.rs  config.rs  datalog.rs  hft_clob.rs  lib.rs  main.rs  market.rs  ml_client.rs  multi_strategy.rs  orderbook.rs  position.rs  presign.rs  presigned_cache.rs  retry.rs  signer.rs  strategy.rs  trade_db.rs  types.rs  websocket.rs  ws_clob.rs
src/strategies/: directional.rs  hybrid.rs  market_maker.rs  mod.rs  momentum.rs  pure_arb.rs  scalper.rs
