[package]
name = "orderflow-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "decimal"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Blockchain
ethers = { version = "2.0", features = ["ws", "abigen"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.33"
hex = "0.4"

# Environment
dotenvy = "0.15"
