[package]
name = "orderflow-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
# Blockchain
ethers = { version = "2.0", features = ["ws", "abigen"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"

# Environment
dotenvy = "0.15"

# HTTP client (for fetching market metadata)
reqwest = { version = "0.11", features = ["json"] }

# Pin crates to avoid edition2024 requirement
home = "=0.5.9"
base64ct = "=1.6.0"
